# figure_parser

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/figure_parser/: main.py
src/figure_parser/internal/: figure_analyzer.py  figure_classifier.py  figure_extrator.py
